Fixes, still need to go fixed box alignment.

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body {
   margin: 0;
+  background-color: var(--primaryLight);
 }
 
 .bubble-font {
@@ -100,7 +101,7 @@ body {
 
 .child-container {
   position: absolute;
-  top: 40px;
+  top: 5px;
   right: 3%;
   background-color: var(--cardLight);
 }
